# storage/api-docs/api-docs.json
@@ -5,11 +5,11 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/roles": {
+        "/api/v1.0/roles": {
             "get": {
                 "summary": "Show roles",
                 "description": "Returns a list of all roles with pagination data.",
-                "operationId": "6cd48af64dafcf1c85923dba47e841a4",
+                "operationId": "add43a2369a12503d32ce0ab6f078b29",
                 "parameters": [
                     {
                         "name": "page",
@@ -81,7 +81,7 @@
             "post": {
                 "summary": "Create a new role",
                 "description": "Creates a new role in the system.",
-                "operationId": "4eb1ce389f63b4dbfcc5b002014636e1",
+                "operationId": "7a42de25c319df0d0006f151f3b4def4",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -126,11 +126,11 @@
                 ]
             }
         },
-        "/api/roles/{id}": {
+        "/api/v1.0/roles/{id}": {
             "get": {
                 "summary": "Show a specific role",
                 "description": "Fetches the details of a single role.",
-                "operationId": "d932a477623c1c931444dcc799f1eb0a",
+                "operationId": "14b6097328b4aa180f564be349a583a6",
                 "parameters": [
                     {
                         "name": "id",
@@ -169,7 +169,7 @@
             "put": {
                 "summary": "Update an existing role",
                 "description": "Updates an existing role in the system.",
-                "operationId": "e0fa8b9f9f9cfb6c7e51a7609dd35dcd",
+                "operationId": "9e0144fcebe39d42a74630e6ec5978ae",
                 "parameters": [
                     {
                         "name": "id",
@@ -226,7 +226,7 @@
             "delete": {
                 "summary": "Delete a specific role",
                 "description": "Deletes a role from the system.",
-                "operationId": "a0c87b804be9d37055fc6f936cbacb1b",
+                "operationId": "4bdce29db3838c6d0a749b5c4499106d",
                 "parameters": [
                     {
                         "name": "id",
@@ -268,11 +268,11 @@
                 ]
             }
         },
-        "/api/users": {
+        "/api/v1.0/users": {
             "get": {
                 "summary": "Show users",
                 "description": "Returns a list of all users with pagination data.",
-                "operationId": "d7a57f4d7de18fb0f92501172472c9b6",
+                "operationId": "7c7b20ab9af829d3cd288a736cbd3c74",
                 "parameters": [
                     {
                         "name": "page",
@@ -344,7 +344,7 @@
             "post": {
                 "summary": "Create a new user",
                 "description": "Creates a new user in the system.",
-                "operationId": "9fea6f2adcb69614c521a7733358382d",
+                "operationId": "511b674a3187447f33e70727b0c188af",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -412,11 +412,11 @@
                 ]
             }
         },
-        "/api/users/{id}": {
+        "/api/v1.0/users/{id}": {
             "get": {
                 "summary": "Show a specific user",
                 "description": "Fetches the details of a single user.",
-                "operationId": "40a5104e23b52137e78c3d3ac48b88a8",
+                "operationId": "45c317c8891228a7ba056f478fd8631d",
                 "parameters": [
                     {
                         "name": "id",
@@ -455,7 +455,7 @@
             "put": {
                 "summary": "Update an existing user",
                 "description": "Updates an existing user in the system.",
-                "operationId": "b166772cec9714067040e77cf14beeba",
+                "operationId": "e3aae65fd87c76587b0f405f717ba2c0",
                 "parameters": [
                     {
                         "name": "id",
@@ -530,7 +530,7 @@
             "delete": {
                 "summary": "Delete a specific user",
                 "description": "Deletes a user from the system.",
-                "operationId": "ce06860a51ab016ef66e753544fe4563",
+                "operationId": "998e903c42e5e6211efc09e1fc606aff",
                 "parameters": [
                     {
                         "name": "id",
